--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -392,7 +392,7 @@ p {
 # Hero
 --------------------------------------------------------------*/
 #hero {
-  background: url("../img/home-bg.jpg") repeat scroll center center/cover;
+  background: url("../img/bg.jpg") repeat scroll center center/cover;
   height: 100vh;
   width: 100%;
 }
@@ -674,7 +674,7 @@ p {
 }
 
 .journal-block .journal-info img {
-  max-width: 95%;
+  max-width: 90%;
 }
 
 .journal-block .journal-info .journal-txt {
